Fixed gap in avatar

--- a/crm-david-yelin/src/styles/Profile.css
+++ b/crm-david-yelin/src/styles/Profile.css
@@ -161,5 +161,5 @@ div .profile-avatar:hover {
 
 .contact-src-log {
   display: flex;
-  gap: 1.2rem;
+  gap: 0.8rem;
 }
